--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "venobox": "^1.8.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0",
     "waypoints": "^4.0.1",
     "webfontloader": "^1.6.28"
   }
