--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
-    "gulp-changed": "^3.1.1",
     "gulp-cli": "^1.4.0",
+    "gulp-count": "^0.3.0",
     "gulp-debug": "^3.1.0",
+    "gulp-newer": "^1.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-tap": "^1.0.1",
