--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "almond": "^0.3.3",
     "animate-sass": "^0.6.6",
     "bootstrap": "^3.3.7",
+    "browser-cookies": "^1.1.0",
     "browserify": "^14.5.0",
     "browserify-shim": "^3.8.14",
     "chartist": "^0.11.0",
