Updated the forms CSS/styleguide
This is in preparation of using this CSS for the marketing page forms.
Also I wanted to general improve the forms section on the styleguide.

--- a/scss/styleguide-toc.yml
+++ b/scss/styleguide-toc.yml
@@ -26,11 +26,12 @@
 - - Forms
   - forms
   - fields
+  - fieldsets
+  - fieldErrors
   - fileUpload
   - checkboxes
   - switch
   - searchbar
-  - inputstates
   - selects
 
 - - Modals / Dialogs
