Added compound field component
We're going to use this for the CV/Resume input on the recruitment form.

Moved contentUpdate to the shared section.

--- a/scss/styleguide-toc.yml
+++ b/scss/styleguide-toc.yml
@@ -29,10 +29,11 @@
 - - Forms
   - forms
   - fields
+  - checkboxes
   - fieldsets
   - fieldErrors
   - fileUpload
-  - checkboxes
+  - compoundField
   - switch
   - searchbar
   - selects
