Added class to center text in a block.

--- a/scss/styleguide-toc.yml
+++ b/scss/styleguide-toc.yml
@@ -15,6 +15,9 @@
   - scrollBars
   - tabs
   - tables
+- - Layout
+  - textCenter
+  - blockCenter
 - - Avatars, Icons, Steps
   - avatars
   - icons
