--- a/scss/styleguide-toc.yml
+++ b/scss/styleguide-toc.yml
@@ -37,7 +37,6 @@
   - switch
   - searchbar
   - selects
-
 - - Modals / Dialogs
   - modalbaseline
   - dialogconfirmation
@@ -51,6 +50,7 @@
 
 - - Elements
   - videoCards
+  - videoSubtitlesList
   - filterList
   - actionBar
   - selectList
