Reworked layout/grid code
- Updated the media breakpoints
  - Removed the xl size and CSS that depended on it
  - Related to that, removed screen-lg-max, since now lg is the largest
    size
- Added respond-to mixin
- Removed various CSS around the .container class.  I'm hoping to redo
  that stuff
- Updated bootstrap handling, we now include the bootstrap source when
  building the CSS bundle.  This makes it so our updated screen-*
  variables get used by bootstrap.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "almond": "^0.3.3",
     "animate-sass": "^0.6.6",
-    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "browser-cookies": "^1.1.0",
     "browserify": "^14.5.0",
     "browserify-shim": "^3.8.14",
