Added code to track clicks

--- a/scss/styleguide-toc.yml
+++ b/scss/styleguide-toc.yml
@@ -14,18 +14,22 @@
   - indicators
   - tabs
   - tables
+
 - - Layout
   - generalLayout
   - textCenter
   - blockCenter
+
 - - Avatars, Icons, Steps
   - avatars
   - icons
   - stepList
+
 - - Buttons
   - buttonTags
   - buttonOptions
   - asyncButton
+
 - - Forms
   - forms
   - fields
@@ -38,6 +42,7 @@
   - switch
   - searchbar
   - selects
+
 - - Modals / Dialogs
   - modalbaseline
   - dialogconfirmation
@@ -48,6 +53,7 @@
 
 - - Utility Classes
   - thumbWrapper
+  - trackClicks
 
 - - Elements
   - videoCards
