--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "JSONStream": "^1.3.4",
     "almond": "^0.3.3",
     "animate-sass": "^0.6.6",
+    "body-scroll-lock": "^2.5.7",
     "bootstrap-sass": "^3.3.7",
     "brace-expansion": "^1.1.11",
     "browser-cookies": "^1.2.0",
